--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Cabeçalho -->
     <header>
         <h1>Minha Página HTML</h1>
+        <a href="page.html">Próxima Página</a>
     </header>
     <!-- Conteúdo da Página -->
     <main>
