--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style/pagina-inicial.css">
 </head>
 <body>
-    
     <!-- Cabeçalho -->
     <header>
         <h1>Minha Página HTML</h1>
@@ -27,6 +26,7 @@
                 <li>Item 2</li>
                 <li>Item 3</li>
             </ul>
+            <button id="add-item">Adicionar Item</button>
             <h3>Lista Ordenada:</h3>
             <ol>
                 <li>Primeiro Item</li>
@@ -73,6 +73,7 @@
                     <input type="file" name="anexo" id="inpAnexo">
                 </div>
                 <button type="submit">Enviar</button>
+                <button id="buttonExemplo" type="button">Localizar Bomba</button>
             </form>
         </section>
     </main>
@@ -82,35 +83,6 @@
             2025 - &copy; Todos Diretos Reservados - Fischario Enterprises
         </p>
     </footer>
-    <script>
-        // SELECIONA um ID (Elemento): (document.getElementById('---'))
-        const element = document.getElementById('exemplo-get');
-        console.log("elemento (id) ->", element);
-        element.style.color = 'black';
-
-        // SELECIONA uma CLASSE: (document.querySelector('---'))
-        const classeQuery = document.querySelector('.caixote');
-        console.log("classe ->", classeQuery);
-
-        // CRIA um ELEMENTO: (document.createElement('---'))
-        const novoH1 = document.createElement('h1');
-        novoH1.textContent = "NOVO H1 AQUI! CRIADO POR JAVASCRIPT";
-        novoH1.style.color = 'blue';
-        console.log("novo h1 ->", novoH1);
-
-        // JUNTA um ELEMENTO / CLASSE: (---.appendChild('---'))
-        classeQuery.appendChild(novoH1);
-
-// ------------------------- exercicios do sor -------------------------------
-
-        // 1 - mudar cor do header:
-        const header = document.getElementsByTagName('header')[0];
-        header.style.backgroundColor = 'blue';
-
-        // 2 - mudar tamanho da letra do footer:
-        const footer = document.getElementsByTagName('footer')[0];
-        footer.style.fontSize = '10px';
-
-    </script>
+    <script src="scripts/pagina-inicial.js"></script>
 </body>
 </html>
